# MotorolaFlash

./: .gitmodules  Building.md  CMakeLists.txt  build_msys2.sh  prepare.sh
Source/: Fastboot.cpp  Fastboot.h  Flasher.cpp  Flasher.h  FlasherThread.cpp  FlasherThread.h  FlashingStep.h  MotorolaFlash.cpp  MotorolaFlash.h  MotorolaFlash.ui  main.cpp  resources.qrc
scripts/: build.sh  prepare.sh  publish_windows.sh
